--- a/index.html
+++ b/index.html
@@ -4,19 +4,6 @@
 		<title>Fish</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Fish</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-
+		TEST
 	</body>
 </html>
